# SISE_satelitar_identifier

./: .gitignore  README.md  Test2.py  Test3.py  Test4.py  Test5.py  batiments.geojson  batiments2.geojson  batiments_polygones_et_bbox.geojson  batiments_polygones_et_bbox2.geojson  city_coords.csv  consignes.txt  coords.csv  coords_to_retrieve.csv  pyproject.toml
data/.coordinates_and_mapping/: city_coords.csv  osm_to_category_mapping.json
data/cleaned_polygons/: cleaned_features_1.geojson  cleaned_features_2.geojson  cleaned_features_3.geojson  cleaned_features_4.geojson  cleaned_features_5.geojson  image_152.txt  image_153.txt  (+2 more)
dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
miscellaneous/: __init__.py  ask_mapbox_for_image.py  clean_overlapping_bboxes.py  create_bbox_from_city_coordinates.py  crop_image.py  format_yolo_labels.py  get_random_points_in_bbox.py  make_a_gif_for_coordinates.py
notebooks/: 01 - Pipeline_complète.ipynb  02 - Training.ipynb  03 - Testing_model.ipynb  0_image_scraping.ipynb  Final_01_Training.ipynb  Final_02_Evaluation.ipynb  Pipeline.ipynb  Pipeline_complète.ipynb  Plots_for_report.ipynb  test_images.json  training_history.json
rapport/: evaluate_model.py  generate_figures.py  rapport.fdb_latexmk  rapport.fls  rapport.tex
test/: batiments_bbox.geojson  batiments_polygones.geojson
test2/: batiments_bbox.geojson  batiments_polygones.geojson
tests/: Test.py  Test3.py  Test4.py
utils/: clean_overlapping_bboxes.py  create_bbox_from_cities_coordinates.py  create_bbox_from_coordinates.py  get_coords_in_bbox.py
(+155 files in other folders)
