[project]
name = "sise-satelitar-identifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "geojson>=3.2.0",
    "geopandas>=1.1.2",
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]
